--- a/www/index.html
+++ b/www/index.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons'
+    rel="stylesheet" type="text/css">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <title>Decks</title>
+  <link rel="shortcut icon" 
+      href="favicon.ico">
 </head>
 
 <body>
